[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }

# Everyone loves a UI
tui = "0.17"
crossterm = "0.22"
